# BitNet-mlx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml  run_offline_blackbox.py
.github/workflows/: blackbox_ci.yml  ci.py  ci.yml
.vscodium/: settings.json  tasks.json
JuniorCoach-Vault/Templates/: swarm-recipe.md
assets/: zsh-10-00-00.rtf  zsh-v0110.rtf  zsh-v0120.rtf  zsh-v0130.rtf  zsh-v0140.rtf  zsh-v0150.rtf  zsh-v0160.rtf  zsh-v0300.rtf  zsh-v0400.rtf  zsh-v0500.rtf  zsh-v0600.rtf  zsh-v0700.rtf  zsh-v0800.rtf  zsh-v0900.rtf  zsh-v10-00.rtf  zsh-v11-00.rtf  zsh-v12-00.rtf  zsh-v13-00.rtf  zsh-v14-00.rtf  zsh-v15-00.rtf  zsh-v16-00.rtf  zsh-v17-00.rtf  zsh-v18-00.rtf  zsh-v19-00.rtf  zsh-v20-00.rtf
benchmarks/: quantization_bench.py
conda/: meta.yaml
deployment/helm/bitnet-mlx/: Chart.yaml  values.yaml
docs/architecture/: bitnet_plasticity_router.py
docs/templates/: swarm_recipe.md
examples/plasticity/: bitnet_plasticity_router.py
private_blackbox/: emulate.sh  memsys_engine.py  run_tests.py
scripts/: validate_blackbox.sh
src/: __init__.py  vision_quant.py
src/bitnet/: backends.py
src/bitnet_mlx/: audio_backend.py  audit.py  autotune.py  binary_layers.py  bitnet_layers.py  cli.py  converter.py  engine.py  power_matrix.py  qat.py  swarm.py  swarm_rpc.py  telemetry.py  vision.py  vlm_backend.py
src/bitnet_mlx/cli/: api.py  main.py  mcp_server.py
src/bitnet_mlx/converter/: surgeon.py
src/bitnet_mlx/core/: blackbox_ops.py  dynamic_bitlinear.py  quant.py  (+3 more)
src/compute/: backend.py  hardware_abstraction.py  hardware_detector.py  tri_state_router.py
src/converter/: surgeon.py
src/inference/: bitnet_bridge.py  proprietary_blackbox.py  quantization_calibration.py  signature_store.py  spatial_sensing_pipeline.py  ternary_analyzer.py  ternary_pipeline.py  ternary_signature.py  ternary_telemetry.py
src/kernels/: cuda_kernels.py  metal_kernels.py  ternary_kernels.py  ternary_matmul.py
src/quantization/: __init__.py  gemma_ternary_converter.py  manifold_quantizer.py  mlx_quantizer.py  model_quantizer.py
src/swarm/: rpc.py
src/training/: adapters.py  engine.py
tests/: test_blackbox.py  test_core.py  test_gemma_quantizer.py
(+14 files in other folders)
