[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitnet_mlx"
version = "82.0.0"
description = "Production-grade MLX-native 1.58-bit SDK. Black-Box Cascades & 5-Discipline Training."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "mlx>=0.16.0", 
    "mlx-lm>=0.16.0", 
    "rich>=13.0.0", 
    "typer>=0.9.0", 
    "pydantic>=2.0.0", 
    "pydantic-settings>=2.0.0", 
    "psutil>=5.9.0", 
    "pandas>=2.0.0", 
    "pyarrow>=14.0.0"
]

[project.scripts]
bitnet-mlx = "bitnet_mlx.cli.main:app"

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]
