# path: BitNet-mlx/pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitnet-mlx-blackbox"
version = "1.1.0"
description = "Air-Gapped Proprietary Math Kernel & 1.58-bit Inference"
authors = [{name = "JuniorCloud LLC"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "mlx>=0.10.0",
    "mlx-lm>=0.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "build>=1.1.1"
]
